# pptx-mcp-server

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: calibrate_ascii.py  extract_icons.py
src/pptx_mcp_server/: __init__.py  __main__.py  _envelope.py  _render.py  _tool_registry.py  server.py  theme.py
src/pptx_mcp_server/engine/: __init__.py  _validate.py  cards.py  charts.py  composites.py  connectors.py  flex.py  font_metrics.py  formatting.py  icons.py  layout_constants.py  pptx_io.py  rendering.py  shapes.py  slides.py  tables.py  tables_grid.py  text_metrics.py  timeline.py  validation.py
src/pptx_mcp_server/engine/components/: __init__.py  _util.py  container.py  kpi_row.py  markers.py  metric_card.py  numbered_list.py  section_header.py
tests/: calibration_helpers.py  conftest.py  test_calibration.py  test_cards.py  test_charts.py  test_composites.py  test_connectors.py  test_container.py  test_data_table.py  test_flex.py  test_formatting.py  test_full_deck.py  test_icons.py  test_integration_v060.py  test_kpi_row.py  test_layout_constants.py  test_library_usage.py  test_markers.py  test_metric_card.py  test_numbered_list.py  test_packaging_extras.py  test_packaging_py_typed.py  test_pptx_io.py  test_real_font_validation.py  test_section_header.py  test_server.py  test_server_tools.py  test_shapes.py  test_shapes_auto_fit.py  test_shapes_rendering.py  test_slides.py  test_tables.py  test_text_metrics.py  test_theme.py  test_theme_atomics.py  test_timeline.py  test_tool_tiering.py  test_validation_extended.py
