[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pptx-mcp-server"
version = "0.1.0"
description = "MCP server for PPTX presentation editing — create, read, and edit PowerPoint slides with professional formatting"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
authors = [
    { name = "knorq", email = "info@knorq.com" },
]
keywords = ["mcp", "pptx", "powerpoint", "presentation", "slides"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
]
dependencies = [
    "python-pptx>=1.0.0",
    "lxml>=4.0.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]

[project.urls]
Homepage = "https://github.com/knorq/pptx-mcp-server"
Repository = "https://github.com/knorq/pptx-mcp-server"

[tool.hatch.build.targets.wheel]
packages = ["src/pptx_mcp_server"]
include = ["src/pptx_mcp_server/py.typed"]

[project.scripts]
pptx-mcp-server = "pptx_mcp_server:main"
