[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pptx-mcp-server"
version = "0.5.1"
description = "Content-aware PPTX layout engine with Japanese-aware text metrics, CSS-flex-like primitives, and structural validator for agent-generated consulting decks"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
authors = [
    { name = "knorq", email = "info@knorq.com" },
]
keywords = ["mcp", "pptx", "powerpoint", "presentation", "slides"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
]
dependencies = [
    "python-pptx>=1.0.0",
    "lxml>=4.0.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
validation = ["fontTools>=4.40"]
test = ["pytest>=7", "fontTools>=4.40"]

[project.urls]
Homepage = "https://github.com/knorq-ai/pptx-mcp-server"
Repository = "https://github.com/knorq-ai/pptx-mcp-server"
Issues = "https://github.com/knorq-ai/pptx-mcp-server/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pptx_mcp_server"]
include = ["src/pptx_mcp_server/py.typed"]

[project.scripts]
pptx-mcp-server = "pptx_mcp_server:main"
